--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   webview_flutter: ^3.0.0
   http: ^0.13.4
+  infinite_scroll_pagination: ^3.1.0
 
 dev_dependencies:
   flutter_test:
