I tried a rough implementation with riverpod.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,12 @@ flutter {
     source '../..'
 }
 
+android {
+    defaultConfig {
+        minSdkVersion 19
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
